tests/NormalTests/paczka1/small_fuzzy/54107760.err
Error in line 1: S806 A645 30,3
Error in line 8: 463aTjHfF3R A48 95,4
Error in line 2: 0Syv7MXb3 S104 10,0
Error in line 13: bwDfjDA S806 84,8
